--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./styles/init-css.scss";
+@import "./styles/colors.scss";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
+
+@import "~primeflex/primeflex.css";
+
+body {
+    font-family: "Roboto", sans-serif !important;
+    font-size: 14px !important;
+    color: $white !important;
+    background-color: $bgColor !important;
+}
+a {
+    text-decoration: none !important;
+    color: $white !important;
+}
+.app-icon {
+    font-family: "Material Symbols Outlined";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px; /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+}
+.container {
+    margin: 0.5rem;
+    padding: 0.5rem;
+}
