coming moviestab banner items

--- a/src/app/components/items-banner/items-banner.component.html
+++ b/src/app/components/items-banner/items-banner.component.html
@@ -1,25 +1,8 @@
-<div class="container">
-    <h2>Treding Movies</h2>
+<div class="container-fluid">
+    <h2>{{title}}</h2>
     <div class="grid">
-
-        <div class="col-2">
-            <movie-item></movie-item>
-        </div>
-
-        <div class="col-2">
-            <movie-item></movie-item>
-        </div>
-        <div class="col-2">
-            <movie-item></movie-item>
-        </div>
-        <div class="col-2">
-            <movie-item></movie-item>
-        </div>
-        <div class="col-2">
-            <movie-item></movie-item>
-        </div>
-        <div class="col-2">
-            <movie-item></movie-item>
+        <div class="col-2 md:col-3 lg:col-6" *ngFor="let item of items">
+            <movie-item [itemData]="item"></movie-item>
         </div>
     </div>
 </div>
