--- a/src/app/components/movie-item/movie-item.component.html
+++ b/src/app/components/movie-item/movie-item.component.html
@@ -1,11 +1,12 @@
-<a class="movie-item">
-    <div class="movie-item-rating">
-        <i class="app-icon">star</i>
-        <span>7.5</span>/10
-    </div>
-    <div class="movie-item-image">
-        <img src="https://image.tmdb.org/t/p/original//egoyMDLqCxzjnSrWOz50uLlJWmD.jpg" alt="" />
-    </div>
-    <div class="movie-item-title"> The Game</div>
-
-</a>
+<ng-container *ngIf="itemData">
+    <a class="movie-item">
+        <div class="movie-item-rating">
+            <i class="app-icon">star</i>
+            <span>{{itemData.vote_average}}</span>/10
+        </div>
+        <div class="movie-item-image">
+            <img [src]="imagesSizes.medium + itemData.poster_path" [alt]="itemData.title" />
+        </div>
+        <div class="movie-item-title"> {{itemData.title}}</div>
+    </a>
+</ng-container>
