--- a/src/app/components/movie-item/movie-item.component.scss
+++ b/src/app/components/movie-item/movie-item.component.scss
@@ -2,7 +2,7 @@
 .movie-item {
     display: block;
     position: relative;
-    min-height: 300px;
+    min-height: 330px;
     border-radius: 5px;
     background-color: $bgColorLight;
     border: 1px solid $lightGray;
@@ -31,6 +31,8 @@
         }
     }
     &-title {
+        display: flex;
+        align-items: center;
         font-weight: bold;
         margin: 0.5rem;
     }
