--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-    <span>© {{date }} M Studio Movies All rights resevered</span>
+    <span>© {{date | date:'yyyy' }} M Studio Movies All rights resevered</span>
 </footer>
