--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <app-slider [items]="upcoming"></app-slider>
+<app-items-banner [items]="popular" title='Now Playing Movies'></app-items-banner>
+<app-items-banner [items]="popular" title='Latest Movies'></app-items-banner>
 <app-items-banner [items]="popular" title='Treding Movies'></app-items-banner>
 <app-items-banner [items]="toprated" title='Top Rated Movies'></app-items-banner>
